[package]
name = "philiprehberger-slug"
version = "0.1.0"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Unicode-aware slug generation for URL-safe strings"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-slug"
keywords = ["slug", "url", "slugify", "unicode", "text"]
categories = ["text-processing", "web-programming"]
